--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -1,65 +1,63 @@
-# Additional translations at https://github.com/heartcombo/devise/wiki/I18n
-
-en:
+ru:
   devise:
     confirmations:
-      confirmed: "Your email address has been successfully confirmed."
-      send_instructions: "You will receive an email with instructions for how to confirm your email address in a few minutes."
-      send_paranoid_instructions: "If your email address exists in our database, you will receive an email with instructions for how to confirm your email address in a few minutes."
+      confirmed: "Ваш адрес электронной почты успешно подтверждён."
+      send_instructions: "Вы получите электронное письмо с инструкциями по подтверждению адреса вашей электронной почты в течение нескольких минут."
+      send_paranoid_instructions: "Если ваш адрес электронной почты существует в нашей базе данных, вы получите электронное письмо с инструкциями по подтверждению адреса вашей электронной почты в течение нескольких минут."
     failure:
-      already_authenticated: "You are already signed in."
-      inactive: "Your account is not activated yet."
-      invalid: "Invalid %{authentication_keys} or password."
-      locked: "Your account is locked."
-      last_attempt: "You have one more attempt before your account is locked."
-      not_found_in_database: "Invalid %{authentication_keys} or password."
-      timeout: "Your session expired. Please sign in again to continue."
-      unauthenticated: "You need to sign in or sign up before continuing."
-      unconfirmed: "You have to confirm your email address before continuing."
+      already_authenticated: "Вы уже вошли в систему."
+      inactive: "Ваша учетная запись ещё не активирована."
+      invalid: "Неверное значение %{authentication_keys} или пароль."
+      locked: "Ваша учетная запись заблокирована."
+      last_attempt: "У вас есть еще одна попытка до блокировки вашей учетной записи."
+      not_found_in_database: "Неверное значение %{authentication_keys} или пароль."
+      timeout: "Ваша сессия истекла. Пожалуйста, войдите снова, чтобы продолжить."
+      unauthenticated: "Вам необходимо войти или зарегистрироваться, чтобы продолжить."
+      unconfirmed: "Вам нужно подтвердить свой адрес электронной почты, чтобы продолжить."
     mailer:
       confirmation_instructions:
-        subject: "Confirmation instructions"
+        subject: "Инструкции по подтверждению"
       reset_password_instructions:
-        subject: "Reset password instructions"
+        subject: "Инструкции по сбросу пароля"
       unlock_instructions:
-        subject: "Unlock instructions"
+        subject: "Инструкции по разблокировке"
       email_changed:
-        subject: "Email Changed"
+        subject: "Изменение адреса электронной почты"
       password_change:
-        subject: "Password Changed"
+        subject: "Изменение пароля"
     omniauth_callbacks:
-      failure: "Could not authenticate you from %{kind} because \"%{reason}\"."
-      success: "Successfully authenticated from %{kind} account."
+      failure: "Не удалось аутентифицировать вас через %{kind} из-за \"%{reason}\"."
+      success: "Успешная аутентификация из %{kind}."
     passwords:
-      no_token: "You can't access this page without coming from a password reset email. If you do come from a password reset email, please make sure you used the full URL provided."
-      send_instructions: "You will receive an email with instructions on how to reset your password in a few minutes."
-      send_paranoid_instructions: "If your email address exists in our database, you will receive a password recovery link at your email address in a few minutes."
-      updated: "Your password has been changed successfully. You are now signed in."
-      updated_not_active: "Your password has been changed successfully."
+      no_token: "Вы не можете получить доступ к этой странице без ссылки на сброс пароля. Если у вас есть ссылка на сброс пароля, пожалуйста, убедитесь, что вы используете полный URL из письма."
+      send_instructions: "Вы получите электронное письмо с инструкциями по сбросу пароля в течение нескольких минут."
+      send_paranoid_instructions: "Если ваш адрес электронной почты существует в нашей базе данных, вы получите ссылку для восстановления пароля на ваш адрес электронной почты в течение нескольких минут."
+      updated: "Ваш пароль успешно изменен. Теперь вы вошли в систему."
+      updated_not_active: "Ваш пароль успешно изменен."
     registrations:
-      destroyed: "Bye! Your account has been successfully cancelled. We hope to see you again soon."
-      signed_up: "Welcome! You have signed up successfully."
-      signed_up_but_inactive: "You have signed up successfully. However, we could not sign you in because your account is not yet activated."
-      signed_up_but_locked: "You have signed up successfully. However, we could not sign you in because your account is locked."
-      signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please follow the link to activate your account."
-      update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and follow the confirmation link to confirm your new email address."
-      updated: "Your account has been updated successfully."
-      updated_but_not_signed_in: "Your account has been updated successfully, but since your password was changed, you need to sign in again."
+      destroyed: "До свидания! Ваша учетная запись успешно отменена. Надеемся увидеть вас снова скоро."
+      signed_up: "Добро пожаловать! Вы успешно зарегистрировались."
+      signed_up_but_inactive: "Вы успешно зарегистрировались. Однако мы не можем вас войти, так как ваша учетная запись еще не активирована."
+      signed_up_but_locked: "Вы успешно зарегистрировались. Однако мы не можем вас войти, так как ваша учетная запись заблокирована."
+      signed_up_but_unconfirmed: "На ваш адрес электронной почты отправлено сообщение с ссылкой для подтверждения вашей учетной записи. Пожалуйста, перейдите по ссылке, чтобы активировать вашу учетную запись."
+      update_needs_confirmation: "Вы успешно обновили свою учетную запись, но нам нужно подтвердить ваш новый адрес электронной почты. Пожалуйста, проверьте свою почту и перейдите по ссылке подтверждения, чтобы подтвердить ваш новый адрес электронной почты."
+      updated: "Ваша учетная запись успешно обновлена."
+      updated_but_not_signed_in: "Ваша учетная запись успешно обновлена, но так как ваш пароль был изменен, вам нужно снова войти в систему."
     sessions:
-      signed_in: "Signed in successfully."
-      signed_out: "Signed out successfully."
-      already_signed_out: "Signed out successfully."
+      signed_in: "Успешный вход в систему."
+      signed_out: "Успешный выход из системы."
+      already_signed_out: "Уже вышли из системы."
     unlocks:
-      send_instructions: "You will receive an email with instructions for how to unlock your account in a few minutes."
-      send_paranoid_instructions: "If your account exists, you will receive an email with instructions for how to unlock it in a few minutes."
-      unlocked: "Your account has been unlocked successfully. Please sign in to continue."
+      send_instructions: "Вы получите электронное письмо с инструкциями по разблокировке вашей учетной записи в течение нескольких минут."
+      send_paranoid_instructions: "Если ваша учетная запись существует, вы получите электронное письмо с инструкциями по разблокировке в течение нескольких минут."
+      unlocked: "Ваша учетная запись успешно разблокирована. Пожалуйста, войдите, чтобы продолжить."
   errors:
     messages:
-      already_confirmed: "was already confirmed, please try signing in"
-      confirmation_period_expired: "needs to be confirmed within %{period}, please request a new one"
-      expired: "has expired, please request a new one"
-      not_found: "not found"
-      not_locked: "was not locked"
+      already_confirmed: "уже подтверждён, попробуйте войти"
+      confirmation_period_expired: "должен быть подтверждён в течение %{period}, запросите новый"
+      expired: "истек, запросите новый"
+      not_found: "не найден"
+      not_locked: "не был заблокирован"
       not_saved:
-        one: "1 error prohibited this %{resource} from being saved:"
-        other: "%{count} errors prohibited this %{resource} from being saved:"
+        one: "1 ошибка предотвращает сохранение этого %{resource}:"
+        many: "%{count} ошибок предотвращают сохранение этого %{resource}:"
