--- a/config/locales/locales/ru.yml
+++ b/config/locales/locales/ru.yml
@@ -74,6 +74,16 @@ ru:
         closed: Комментарии (Закрыты %{closer_name})
         open: Комментарии
         pages: "Страницы комментариев:"
+  date:
+    month_names: [ ~, Январь, Февраль, Март, Апрель, Май, Июнь, Июль, Август, Сентябрь, Октябрь, Ноябрь, Декабрь ]
+    abbr_month_names: [ ~, Янв, Фев, Мар, Апр, Май, Июн, Июл, Авг, Сен, Окт, Ноя, Дек ]
+    day_names: [ Воскресенье, Понедельник, Вторник, Среда, Четверг, Пятница, Суббота ]
+    abbr_day_names: [ Вс, Пн, Вт, Ср, Чт, Пт, Сб ]
+  formats:
+    default: "%d %B %Y"
   time:
     formats:
-      commontator: "%d %b %Y в %H:%M %Z"
+      default: "%d %B %Y %H:%M:%S"
+  datetime:
+    formats:
+      default: "%d %B %Y %H:%M:%S"
